# causalfair-repo

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
causalfair/: __init__.py  causal_fair_dag.py  causal_fair_estimate.py  causal_fair_sensitivity.py
data/: README.md
examples/: download_hmda_real.py  generate_validation_figures.py  run_real_hmda_validation.py
