[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "causalfair"
version = "0.1.0"
description = "Causal Mediation Analysis for Algorithmic Fairness in Credit Decisions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Duraimurugan Rajamanickam", email = "drajamanicka@ualr.edu"},
]
keywords = ["causal inference", "mediation analysis", "algorithmic fairness", "credit scoring", "HMDA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.4",
    "scikit-learn>=1.0",
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "black", "flake8"]
viz = ["matplotlib>=3.5", "seaborn>=0.12"]

[project.urls]
Homepage = "https://github.com/rdmurugan/causalfair-repo"
Paper = "https://arxiv.org/abs/XXXX.XXXXX"
Issues = "https://github.com/rdmurugan/causalfair-repo/issues"
